share/cascade/test/regression/type_check/fail/issue_45c.v
// wire can't have a recursive definition

wire A=A;
